Add gates and die size cards to GitHub Pages reports
- Added GitHub Pages generation script and template from FFT IP
- Updated GitHub Actions workflow to generate index.html with gates and die size
- Gate analysis shows: 1,659 gates, 2.0mm² die size for SPI Controller
- Added extract_gate_analysis() function to parse gate counts and transistor estimates
- New stat cards display real-time gate count and die size information

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -1790,6 +1790,20 @@ jobs:
           
           echo "✅ Test harness report generation complete"
 
+      # Generate GitHub Pages index with gates and die size
+      - name: Generate GitHub Pages index
+        if: always()
+        run: |
+          echo "🌐 Generating GitHub Pages index with gates and die size..."
+          
+          # Run the GitHub Pages generation script
+          if [ -f "scripts/generate_github_pages.py" ]; then
+            python3 scripts/generate_github_pages.py
+            echo "✅ GitHub Pages index generated with gates and die size cards"
+          else
+            echo "⚠️ GitHub Pages generation script not found"
+          fi
+
       # Upload artifacts
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
